# DASNet-workshop

./: lab2d_inference_helpers.py  predict.py  pyproject.toml  train.py  utils.py
dasnet/: __init__.py  inference.py  predict.py
dasnet/data/: das.py
dasnet/model/: roiheads.py
