[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasnet"
version = "0.1.2"
description = "DASNet: Mask R-CNN for event detection in Distributed Acoustic Sensing data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "pandas",
    "h5py",
    "tqdm",
    "fsspec",
    "matplotlib",
]

[project.optional-dependencies]
train = [
    "obspy",
    "wandb",
    "gcsfs",
    "pycocotools",
]

[tool.setuptools.packages.find]
include = ["dasnet*"]
